# Shawshank

./: README.md  pyproject.toml  requirements.txt
data/bathroom/: FloorPlan401_002.json  FloorPlan401_003.json  FloorPlan410_004.json  FloorPlan413_001.json  FloorPlan414_004.json  FloorPlan415_001.json  FloorPlan418_005.json  FloorPlan421_001.json  FloorPlan424_003.json  FloorPlan426_001.json
data/bedroom/: FloorPlan304_004.json  FloorPlan306_001.json  FloorPlan307_002.json  FloorPlan311_003.json  FloorPlan313_003.json  FloorPlan315_001.json  FloorPlan316_001.json  FloorPlan319_004.json  FloorPlan326_001.json  FloorPlan327_001.json
data/benign_instructions/: bathroom_instructions.csv  bedroom_instructions.csv  kitchen_instructions.csv  living_room_instructions.csv
data/dangerous_instructions/: bathroom.csv  bedroom.csv  kitchen.csv  living_room.csv
data/kitchen/: FloorPlan10_001.json  FloorPlan14_001.json  FloorPlan16_003.json  FloorPlan17_002.json  FloorPlan18_005.json  FloorPlan25_004.json  FloorPlan26_005.json  FloorPlan30_005.json  FloorPlan7_003.json  FloorPlan9_005.json
data/living_room/: FloorPlan207_002.json  FloorPlan208_004.json  FloorPlan209_003.json  FloorPlan211_003.json  FloorPlan212_001.json  FloorPlan212_002.json  FloorPlan216_001.json  FloorPlan223_001.json  FloorPlan226_004.json  (+1 more)
model/: readme.md
prompts/: Rephrasings.txt  build_gen.txt  build_gen2.txt  evaluation.txt  evaluationdos.txt  gen.txt
src/: attack.py  attacktest.py  collection_scene.py  config.py  generate _instructions.py  qwen_defense.py  utils.py  utils_agent.py
(+72 files in other folders)
