[project]
name = "Shawshank"
version = "0.1.0"
description = "Anonymous repository"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "accelerate==0.33.0",
    "ai2thor>=5.0.0",
    "deepspeed==0.9.5",
    "langchain-community>=0.2.5",
    "langchain-huggingface>=0.0.3",
    "langchain-nvidia-ai-endpoints>=0.2.0",
    "langchain-openai>=0.1.14",
    "langgraph>=0.1.5",
    "modelscope>=1.30.0",
    "openpyxl>=3.1.5",
    "pydantic==1.10.18",
    "sentence-transformers==3.1.0",
]

